--- a/Analisis de Homicidios en Colombia.Rmd
+++ b/Analisis de Homicidios en Colombia.Rmd
@@ -42,6 +42,8 @@ library(mice)
 library(VIM)
 library(htmlwidgets)
 library(htmltools)
+library(timsac)
+library(changepoint)
 
 ```
 
@@ -301,11 +303,174 @@ pacf(a_estacio, main = "Autocorrelación parcial")
 
 Al identificar la estructura autorregresiva en la serie, se tiene que, se necesitan 3 rezagos para predecir el valor actual de la serie.
 
-### - *Modelado*
+### Aplicación de Holt-Winters Model.
 
-**ARIMA(p,d,q); donde, p = rezagos, d = diferenciación, y q = orden media móvil**
+Dada la evidencia de existencia de un valor medio, tendencia y estacionalidad en los datos; se permite la aplicación del modelo Holt-Winters; como modelo predictorio de largo y mediano plazo por medio de un triple suavizado exponencial al tener en cuenta los aspectos mencionados con anterioridad.
+
+La primera decisión radica en elegir el tipo de patrón de estacionalidad, es decir, si este modelo debería ser representado por una estacionalidad aditiva o multiplicativa. Basándonos en la evidencia previamente encontrada, se observa una tendencia que aumenta o disminuye proporcionalmente con el promedio móvil de los datos, lo que sugiere que no permanece constante. Además, la amplitud de esta estacionalidad varía con el nivel encontrado. Por lo tanto, se decidió que el modelo a escoger será multiplicativo.
+
+### Multiplicative
+
 ```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
-Modelo <- Arima(a_estacio, order = c(3,0,0))
-summary(Modelo)
+Modelo <- HoltWinters(df_ts, seasonal = "multiplicative")
+
+plot(Modelo, main = "Predicciones con modelo Holt-Winters", ylab = "Cantidad de Homicidios", xlab = "Tiempo (Años)")
+legend("bottomright", legend = c("Data", "Prediction"), col = c("black", "red"), lty = 1)
+
 ```
+
+La gráfica nos brinda una visualización del comportamiento de las predicciones generadas por el modelo multiplicativo Holt-Winters. En un primer vistazo, podemos observar un ajuste cercano entre las predicciones y los datos base. Además, se aprecia una tendencia y estacionalidad similar entre ambas.
+
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+# Se recuperan los valores alpha, beta, y gamma usados en el modelo
+alpha <- Modelo$alpha
+beta <- Modelo$beta
+gamma <- Modelo$gamma
+```
+
+Los valores de los parámetro obtenidos son:
+**Alpha:** `r alpha` \n
+**Beta:** `r beta` \n
+**Gamma:** `r gamma` \n
+
+Al revisar los parámetros usados se puede apreciar que el modelo está dando más peso al parámetro **Alpha** que corresponde a la tendencia.
+
+Para un mejor ajuste, se probará modificar los parametros **Beta**, **Gamma** y **Alpha** del modelo **holt-winters**, dado a que éstas se asocian respectivamente con tendencia, estacionalidad y nivel (**promedio móvil**).
+
+**Alpha** es un número entre 0 y 1 que determina cuanto peso se le da a las observaciones más recientes al calcular la tendencia.
+
+**Beta** es un número entre 0 y 1 que determina cuanto peso se le da a las observaciones más recientes en cuanto su estacionalidad.
+      
+**Gamma** es un número entre 0 y 1 que determina cuanto peso se le da a las observaciones más recientes en cuanto su nivel (promedio móvil).
+
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+Modelo2 <- HoltWinters(df_ts, seasonal = "multiplicative", alpha = 0.7,
+                       beta = 0, gamma = 0.9)
+plot(Modelo2, main = "Predicciones con modelo Holt-Winters (Uso de parámetros: Nivel)")
+legend("bottomright", legend = c("Data", "Prediction"), col = c("black", "red"), lty = 1)
+```
+
+Al modificar dando más peso al parámetro **Gamma** correspondiente al Nivel, se puede apreciar como las estimaciones cambian en magnitud y los picos y valles no coinciden en igual proporción como en el modelo original.
+
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+Modelo3 <- HoltWinters(df_ts, seasonal = "multiplicative", alpha = 0.7,
+                       beta = 0.9, gamma = 0.1)
+plot(Modelo3, main = "Predicciones con modelo Holt-Winters (Uso de parámetros: Estacionalidad)")
+legend("topleft", legend = c("Data", "Prediction"), col = c("black", "red"), lty = 1)
+
+```
+
+Al modificar dando más peso al parámetro **Beta** correspondiente a la Estacionalidad, se puede apreciar como las estimaciones del 2024 es muy diferente a los modelos anteriores, lo cual se explica al considerar lo ocurrido en el año 2023 como consecuencia de factores externos que sólo afectan en ese periodo de tiempo.
+
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+Modelo4 <- HoltWinters(df_ts, seasonal = "multiplicative", alpha = 0.7,
+                       beta = 0.1, gamma = 0.1)
+plot(Modelo4, main = "Predicciones con modelo Holt-Winters (Uso de parámetros: Estacionalidad)")
+legend("topleft", legend = c("Data", "Prediction"), col = c("black", "red"), lty = 1)
+
+```
+
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+plot(fitted(Modelo), main = "Holt-winters Ajuste", xlab = "", ylab = "")
+
+plot(fitted(Modelo4), main = "Holt-winters Ajuste", xlab = "", ylab = "")
+```
+
+El ajuste del modelo muestra una tendencia constante, un nivel que se aproxima a los datos observados y una estacionalidad periódica entre los años.
+
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+prediction <- predict(Modelo, 11, prediction.interval = TRUE, level = 0.95)
+plot(forecast(Modelo, h = 11, level = c(80,95)), main = "Predicciones en Colombia bajo el modelo Holt-Winters")
+
+```
+
+En los valores predichos bajo el modelo **Holt-winters**, se implementó la predicción de 11 meses posteriores a enero 2024 con intervalos de confianza del **80** y **95%**, observando unas barreras correspondientes a **1200** maximo y menos de **200** homicidios sin 0, por observación, el número estaría entre **180** a **150 homicidios**.
+
+## - Forcast evaluation
+
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+Modelo_evaluation <- forecast(Modelo, h = 11, level=c(80,95))
+
+acf(Modelo_evaluation$residuals, lag.max=30, na.action=na.pass)
+```
+
+Realizando una autocorrelación a través de la función 'acf', se establecen unos rezagos de 30, haciendo alusión a la misma obsevación en el mes anterior, y dejando denotado no tener en cuenta los NA's en la operación.
+     
+Dado lo anterior, se observa que solo un error sobresale de la franja inferior de confianza, denotando la existencia de factores externos que tienen un grado elevado de significancia en la variabilidad de los datos pudiendo atribuirse a los cambios políticos del nuevo gobierno central o la crisis sanitaria.
+
+## - Testeo de errores
+
+La prueba Ljung-box evalua la hipotesis nula de que no hay autocorrelación en los datos hasta el rezago especificado, en este caso **30**.
+
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+Box.test(Modelo_evaluation$residuals, lag=30, type="Ljung-Box")
+
+```
+
+Dado que **p-value** es mayor a **0.0**5 se acepta la hipotesis nula advertida en el parrafo anterior, lo que significa que en primera instacia hay una buena especificación del modelo, las predicciones son confiables y los residuos son aleatorios, lo que permite al modelo capturar adecuadamente la estructura de dependencia temporal de los datos.
+
+```{r echo=FALSE,message=FALSE,warning=FALSE, fig.align='center'}
+hist(Modelo_evaluation$residuals, main = "Residuos del modelo Holt-Winters")
+
+```
+
+Así las cosas, graficando los residuos del modelo, se tiene que gran parte de las observaciones se encuentran alrededor de **0**, lo que sugiere que el modelo no tiene un sesgo sistemático en sus predicciones; captura bien la estacionalidad y la tendencia de los datos; y explica en mayor parte la variabilidad de los datos.
+
+## - Modelaje Box - Jenkins
+
+La prueba dicker-fuller realizada en líneas de código anteriores, confirma estacionariedad en los datos con un **p-value** de **0.01**; se ajustó la variabilidad y se halló los rezagos correspondientes. De esta manera, con todas estas observaciones realizadas, este subcapitulo de modelaje se trabajará con el time series conformada de **'a_estacio'**
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+# Hallando el modelo de ajuste
+
+m_arima <- auto.arima(a_estacio)
+m_arima
+```
+
+En respuesta a la **ARIMA(2,0,1)(0,0,2)[12]**; se tiene que el modelo mide una parte no estacional con los componentes **(2,0,1)** y estacional **(0,0,2)[12]**; esto, permitirá capturar patrones tanto de corto plazo como de largo plazo.De esta manera, la primera parte contiene **2** componentes autoregresivos. **0** de estacionariedad y **1** con media móvil; por su parte, la segunda contiene una media móvil de **2** y el período de evaluación de **12** meses refiriendosea que los datos se presentan de manera anual.
+      
+Por su parte los valores bajos de **AIC** (**Akaike Information Criterion**) de **-146.54** señala a complejidad del modelo, donde a menor valor mejor el modelo, **AICc** (**Corrected AIC**) de **-146.02** y **BIC** (**Bayesian Information Criterion**) de **-127.8** sugieren que el modelo se ajusta bien a los datos.
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+# Hallando el punto de cambio de la media
+
+p_change <- cpt.mean(a_estacio, method = "AMOC") # AMOC = "At most one change"
+cpts(p_change)
+```
+
+retorna **numeric(0)**. Esto significa que no se detectaron puntos de cambio en la media de la serie temporal a_estacio utilizando el método 'AMOC'. En otras palabras, la serie temporal no muestra evidencia de un cambio significativo en la media en ningún punto.
+      
+La salida **numeric(0)** indica que la media de la serie temporal a_estacio es constante a lo largo del tiempo, al menos según el método **'AMOC'**.
+
+## - Predicciones
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+# Realizar predicciones a 11 pasos hacia adelante
+predicciones <- forecast(m_arima, h = 11)
+
+# Visualizar las predicciones
+plot(predicciones, main = "Predicciones con el modelo ARIMA")
+```
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+residuales<-m_arima$residuals
+qqnorm(residuales)
+qqline(residuales)
+shapiro.test(residuales)
+
+```
+
+Se puede observar que que hay residuos extremos tanto en la parte inferior como superior de la linea de ajuste. Adicionalmente el test de Shapiro, establece que no hay normalidad en los residuos.
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+Box.test(residuales, type="Ljung-Box")
+
+```
+
+Dado que la p-value es mayor a 0.05 se acepta la hipotesis nula, lo que significa que en primera instacia hay una buena especificación del modelo, las predicciones son confiables y los residuos son aleatorios, lo que permite al modelo capturar adecuadamente la estructura de dependencia temporal de los datos.
+
+
+
+
+
 
